objects/VDO_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting used to change the values of demo components.</description>
    <fields>
        <fullName>Colour10__c</fullName>
        <label>Colour10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colour1__c</fullName>
        <label>Colour1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Colour2__c</fullName>
        <label>Colour2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Symbol__c</fullName>
        <label>Currency Symbol</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_App_Message__c</fullName>
        <label>Mobile App Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_App_Show_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile App Show Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_App_Title__c</fullName>
        <label>Mobile App Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_App_Type__c</fullName>
        <label>Mobile App Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>VDO Settings</label>
</CustomObject>